fix overflow

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1015,6 +1015,7 @@
 			border-style: solid;
 			opacity: 1;
 			position: absolute;
+			overflow: auto;
 		}
 
 		.goto-next {
